--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button>hello world</button>
+    <h1>hello world</h1>
+    <button>Click this button</button>
 </body>
 </html>
